# competitive-library

./: .gitignore  .pinact.yaml  Cargo.toml  Dockerfile  Makefile.toml  README.md  aliases.js  auto_commit.py  cargo-runner.py  clipbutton.css  clipbutton.js  crates.js  docker-compose.yml  help.html  index.html  index.md  matrix.py  oj-run.py  rust-snippet.py  scrape-examples-help.html  search-index.js  settings.html  source-files.js  src-files.js  verify-paths.py  verify.py
crates/aizu_online_judge/: Cargo.toml
crates/aizu_online_judge/src/: lib.rs
crates/aizu_online_judge/src/dpl/: dpl_1_a.rs  dpl_1_b.rs  dpl_1_c.rs  dpl_1_d.rs  dpl_1_e.rs  dpl_1_f.rs  dpl_1_g.rs  dpl_1_h.rs  dpl_1_i.rs  dpl_3_a.rs  dpl_3_b.rs  dpl_3_c.rs  mod.rs
crates/aizu_online_judge/src/dsl/: dsl_1_a.rs  dsl_1_b.rs  dsl_2_a.rs  dsl_2_b.rs  dsl_2_c.rs  dsl_2_d.rs  dsl_2_e.rs  dsl_2_f.rs  dsl_2_g.rs  dsl_2_h.rs  dsl_2_i.rs  dsl_3_a.rs  dsl_3_b.rs  dsl_3_c.rs  dsl_3_d.rs  dsl_4_a.rs  dsl_5_a.rs  dsl_5_b.rs  mod.rs
crates/aizu_online_judge/src/grl/: grl_1_a.rs  grl_1_b.rs  grl_1_c.rs  grl_2_a.rs  grl_2_b.rs  grl_3_a.rs  grl_3_b.rs  grl_3_c.rs  grl_4_a.rs  grl_4_b.rs  grl_5_a.rs  grl_5_b.rs  grl_5_c.rs  grl_5_d.rs  grl_5_e.rs  grl_6_a.rs  grl_6_b.rs  grl_7_a.rs  mod.rs
crates/aizu_online_judge/src/itp1/: itp1_1_a.rs  mod.rs
crates/codesnip/: Cargo.toml  README.md
crates/codesnip/src/: lib.rs  main.rs  mapping.rs  parse.rs
crates/codesnip/src/commands/: build.rs  mod.rs
crates/competitive/: Cargo.toml
crates/competitive/benches/: criterion.rs  fft.rs  gcd.rs  mint.rs  ntt.rs
crates/competitive/src/: algebra.rs  algorithm.rs  combinatorial_optimization.rs  data_structure.rs  geometry.rs  graph.rs  lib.rs  main.rs  math.rs  num.rs  prelude.rs  string.rs  tools.rs  tree.rs
crates/competitive/src/algebra/: action.rs  lazy_map.rs  magma.rs  mod.rs  monoid_action.rs  operations.rs  ring.rs  ring_operations.rs
crates/competitive/src/algorithm/: automata_learning.rs  baby_step_giant_step.rs  binary_search.rs  bitdp.rs  bitwiseand_convolve.rs  bitwiseor_convolve.rs  cartesian_tree.rs  chromatic_number.rs  combinations.rs  convex_hull_trick.rs  doubling.rs  esper.rs  horn_satisfiability.rs  impartial_game.rs  lcm_convolve.rs  mo.rs  mo_algorithm.rs  mod.rs  number_of_increasing_sequences_between.rs  other.rs  partisan_game.rs  quotient_index.rs  rho_path.rs  search.rs  slide_minimum.rs  solve_01_on_tree.rs  sort.rs  sqrt_decomposition.rs  stern_brocot_tree.rs  syakutori.rs  ternary_search.rs  xorbasis.rs  zero_sum_game.rs  zeta_transform.rs
crates/competitive/src/combinatorial_optimization/: knapsack_problem.rs  largest_pattern.rs  levenshtein_distance.rs  lexicographical_subsequence.rs  longest_increasing_subsequence.rs  maximum_scoring_segment_sets.rs  mod.rs  subset_sum_problem.rs
crates/competitive/src/data_structure/: accumulate.rs  allocator.rs  automaton.rs  binary_indexed_tree.rs  binary_indexed_tree_2d.rs  binary_trie.rs  bit_vector.rs  bitset.rs  btreemap_ext.rs  compress.rs  compressed_binary_indexed_tree.rs  compressed_segment_tree.rs  container.rs  counter.rs  disjoint_sparse_table.rs  doubly_linked_list.rs  fibonacci_hash.rs  implicit_splay_tree.rs  implicit_treap.rs  kdtree.rs  lazy_segment_tree.rs  lazy_segment_tree_map.rs  line_set.rs  merging_union_find.rs  mod.rs  pairing_heap.rs  partially_retroactive_priority_queue.rs  persistent_segment_tree.rs  range_ap_add.rs  range_frequency.rs  range_map.rs  range_minimum_query.rs  segment_tree.rs  segment_tree_2d.rs  segment_tree_map.rs  sliding_window_aggregation.rs  sliding_winsow_aggregation.rs  slope_trick.rs  sparse_set.rs  splay_operations.rs  (+10 more)
crates/competitive/src/geometry/: approx.rs  ccw.rs  circle.rs  closest_pair.rs  line.rs  mod.rs  polygon.rs
crates/competitive/src/graph/: adjacency_list.rs  bipartite_matching.rs  closure.rs  dulmage_mendelsohn_decomposition.rs  edge_list.rs  general_matching.rs  general_weighted_matching.rs  graph_base.rs  graphvis.rs  grid.rs  low_link.rs  maximum_flow.rs  minimum_cost_flow.rs  minimum_spanning_arborescence.rs  minimum_spanning_tree.rs  mod.rs  network_simplex.rs  order.rs  project_selection_problem.rs  shortest_path.rs  sparse.rs  sparse_graph.rs  steiner_tree.rs  strongly_connected_component.rs  topological_sort.rs  two_satisfiability.rs
crates/competitive/src/heuristic/: beam_search.rs  mod.rs  simulated_annealing.rs  simurated_annealing.rs
crates/competitive/src/math/: arbitrary_mod_binomial.rs  array_vec.rs  berlekamp_massey.rs  binomial_prefix_sum.rs  bitwise_transform.rs  bitwiseand_convolve.rs  bitwiseor_convolve.rs  bitwisexor_convolve.rs  black_box_matrix.rs  convolve_steps.rs  determinant_linear.rs  discrete_logarithm.rs  factorial.rs  fast_fourier_transform.rs  fast_prime_mod.rs  floor_sum.rs  formal_power_series.rs  garner.rs  gcd.rs  gcd_convolve.rs  lagrange_interpolation.rs  lcm_convolve.rs  linear_congruence.rs  linear_diophantine.rs  matrix.rs  miller_rabin.rs  mint_fft_convolve.rs  mint_matrix.rs  mod.rs  mod_sqrt.rs  number_theoretic_transform.rs  nums.rs  polynomial.rs  pow_prec.rs  prime.rs  prime_factors.rs  prime_list.rs  prime_table.rs  primitive_root.rs  quotient_array.rs  (+4 more)
crates/competitive/src/num/: barrett_reduction.rs  bounded.rs  complex.rs  decimal.rs  discrete_steps.rs  double_double.rs  dual_number.rs  float.rs  integer.rs  mint.rs  mod.rs  quad_double.rs  rational.rs  urational.rs  (+1 more)
crates/competitive_bench/: Cargo.toml
crates/competitive_bench/benches/: barrett_reduction.rs  criterion.rs  dynamic_sequence.rs  fast_io.rs  gcd.rs  mint.rs  special_modulo.rs  special_ring.rs  xor_linked_tree.rs
crates/library_checker/: Cargo.toml
crates/library_checker/src/: datastructure.rs  lib.rs  math.rs
crates/snippet/: Cargo.toml  README.md
crates/snippet/src/: ast_helper.rs  attribute.rs  config.rs  error.rs  lib.rs  main.rs  mapping.rs  output.rs  parse.rs
crates/tools/codesnip/: Cargo.toml  README.md
crates/tools/codesnip_core/: Cargo.toml
crates/tools/verify/: Cargo.toml  README.md  generate_sample.py
crates/verify/: Cargo.toml  README.md
(+53106 files in other folders)
