[package]
name = "competitive-library"
version = "0.0.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-snippet = "0.6"

# Library-Checker: https://judge.yosupo.jp/
# sample
[[bin]]
name = "aplusb"
path = "src/library-checker/sample/aplusb.rs"
test = false
bench = false
