[package]
name = "competitive"
version = "0.0.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-snippet = "0.6"

# Library-Checker: https://judge.yosupo.jp/
# sample
[[bin]]
name = "aplusb"
path = "src/library-checker/sample/aplusb.rs"
test = false
bench = false

[[bin]]
name = "many_aplusb"
path = "src/library-checker/sample/many_aplusb.rs"
test = false
bench = false

# datastructure
[[bin]]
name = "unionfind"
path = "src/library-checker/datastructure/unionfind.rs"
test = false
bench = false

[[bin]]
name = "staticrmq-segment_tree"
path = "src/library-checker/datastructure/staticrmq-segment_tree.rs"
test = false
bench = false

[[bin]]
name = "staticrmq-disjoint_sparse_table"
path = "src/library-checker/datastructure/staticrmq-disjoint_sparse_table.rs"
test = false
bench = false

[[bin]]
name = "point_add_range_sum-segment_tree"
path = "src/library-checker/datastructure/point_add_range_sum-segment_tree.rs"
test = false
bench = false

[[bin]]
name = "point_add_range_sum-binary_indexed_tree"
path = "src/library-checker/datastructure/point_add_range_sum-binary_indexed_tree.rs"
test = false
bench = false

[[bin]]
name = "point_set_range_composite"
path = "src/library-checker/datastructure/point_set_range_composite.rs"
test = false
bench = false

[[bin]]
name = "range_affine_range_sum"
path = "src/library-checker/datastructure/range_affine_range_sum.rs"
test = false
bench = false

[[bin]]
name = "queue_operate_all_composite"
path = "src/library-checker/datastructure/queue_operate_all_composite.rs"
test = false
bench = false

# graph
[[bin]]
name = "lca"
path = "src/library-checker/graph/lca.rs"
test = false
bench = false

[[bin]]
name = "scc"
path = "src/library-checker/graph/scc.rs"
test = false
bench = false

[[bin]]
name = "bipartitematching"
path = "src/library-checker/graph/bipartitematching.rs"
test = false
bench = false

# math
[[bin]]
name = "two_sat"
path = "src/library-checker/math/two_sat.rs"
test = false
bench = false

# string
[[bin]]
name = "zalgorithm"
path = "src/library-checker/string/zalgorithm.rs"
test = false
bench = false

[[bin]]
name = "suffixarray"
path = "src/library-checker/string/suffixarray.rs"
test = false
bench = false


# AIZU ONLINE JUDGE: https://onlinejudge.u-aizu.ac.jp/
[[bin]]
name = "dsl_2_f"
path = "src/aoj/dsl/dsl_2_f.rs"
test = false
bench = false
