[package]
name = "competitive"
version = "0.0.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-snippet = "0.6"
verify_attr = { path = "./verify_attr" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3"
lazy_static = "1"

[features]
default = []
verify_doc = []
