[package]
name = "aizu_online_judge"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"

[lib]
doctest = false
bench = false

[dependencies]
competitive = { path = "../competitive" }
verify = { path = "../verify" }

[features]
default = []
verify_doc = []
verify_test = []
