[package]
name = "aizu_online_judge"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2021"

[lib]
doctest = false
bench = false
doc-scrape-examples = true

[dependencies]
competitive = { path = "../competitive" }
verify = { path = "../tools/verify" }

[features]
default = []
verify_doc = []
verify_test = []
