[package]
name = "codesnip"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"

[lib]
doc = false
proc-macro = true

[[bin]]
name = "cargo-codesnip"
path = "src/main.rs"
doc = false

[dependencies]
codesnip_core = { path = "../codesnip_core" }
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
quote = "1"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.15"
rayon = "1.4"
anyhow = "1.0"
