[package]
name = "competitive"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"
autobenches = false

[dependencies]
codesnip = { git = "https://github.com/to-omer/codesnip.git", package = "codesnip_attr" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "criterion"
harness = false
