[package]
name = "competitive"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"
autobenches = false

[dependencies]
codesnip = { version = "0.2.1", package = "codesnip_attr" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false

[features]
default = ["codesnip/check"]
