[package]
name = "competitive"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2024"

[lib]
doc-scrape-examples = true

[dependencies]
codesnip = { version = "0.4.0", package = "codesnip_attr", features = [
    "check",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
