[package]
name = "competitive_bench"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2024"
autobenches = false

[dependencies]
competitive = { path = "../competitive/" }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false
