[package]
name = "library_checker"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"

[lib]
doctest = false
bench = false
doc-scrape-examples = true

[dependencies]
competitive = { path = "../competitive" }
verify = { path = "../tools/verify" }

[features]
default = []
verify_doc = []
verify_test = []
