[package]
name = "snippet"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"

[lib]
test = false
doctest = false
bench = false
doc = false
proc-macro = true

[[bin]]
name = "snippet-extract"
path = "src/main.rs"
doctest = false
bench = false
doc = false

[dependencies]
syn = { version = "1", features = ["full", "extra-traits", "visit", "visit-mut"] }
proc-macro2 = "1"
quote = "1"
structopt = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"
