[package]
name = "verify"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"

[lib]
doc = false

[dependencies]
verify_attr = { path = "../verify_attr" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3"
lazy_static = "1"
log = "0.4"
env_logger = "0.7"
