[package]
name = "codesnip"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"

[[bin]]
name = "cargo-codesnip"
path = "src/main.rs"
doc = false

[dependencies]
codesnip_core = { path = "../codesnip_core" }
codesnip_attr = { path = "../codesnip_attr" }
syn = { version = "1", features = ["full"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
indicatif = "0.15"
rayon = "1.4"
anyhow = "1.0"
tempfile = "3"
regex = "1"
