[package]
name = "codesnip_core"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2018"

[dependencies]
syn = { version = "1", features = ["full", "extra-traits", "visit", "visit-mut"] }
proc-macro2 = "1"
quote = "1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "mod_path"
path = "examples/mod_path/lib.rs"
crate-type = ["lib"]

[[example]]
name = "mod_path_expected"
crate-type = ["lib"]
