[package]
name = "verify"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2021"

[lib]
doc = false

[dependencies]
chrono = "0.4.19"
dirs = "4.0.0"
env_logger = "0.9.0"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tempfile = "3.3.0"
tokio = { version = "1.19.2", features = ["rt", "fs"] }
toml = "0.5.9"
verify_attr = { path = "../verify_attr" }
