[package]
name = "verify"
version = "0.1.0"
authors = ["to-omer <toomerhs@gmail.com>"]
edition = "2021"

[lib]
doc = false

[dependencies]
chrono = "0.4.39"
dirs = "6.0.0"
env_logger = "0.11.6"
fd-lock = "4.0.4"
log = "0.4.17"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tempfile = "3.3.0"
tokio = { version = "1.43.0", features = ["rt", "fs"] }
toml = "0.8.20"
verify_attr = { path = "../verify_attr" }
